rethinking the tables for a better data management, also added some new functionalites+ cleaning the code