@@ -1,20 +1,16 @@
 package com.example.musiclibrary.services;
 
-import com.example.musiclibrary.dto.SearchAll;
+import com.example.musiclibrary.models.SearchAllEntity;
 import com.example.musiclibrary.models.Album;
 import com.example.musiclibrary.models.Artist;
 import com.example.musiclibrary.models.Song;
 import com.example.musiclibrary.repositories.AlbumRepository;
 import com.example.musiclibrary.repositories.ArtistRepository;
 import com.example.musiclibrary.repositories.SongRepository;
-import lombok.AllArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
 @Service
 
 public class SearchService {
@@ -28,25 +24,24 @@ public class SearchService {
         this.artistRepository = artistRepository;
         this.songRepository = songRepository;
     }
-    public List<SearchAll> search(String query) {
-        List<SearchAll> results = new ArrayList<>();
+
+    public List<SearchAllEntity> search(String query) {
 
         List<Album> albums = albumRepository.findByTitleContainingIgnoreCase(query);
-        results.addAll(albums.stream()
-                .map(album -> new SearchAll("Album", album.getTitle()))
-                .collect(Collectors.toList()));
+        List<SearchAllEntity> results = new ArrayList<>(albums.stream()
+                .map(album -> new SearchAllEntity("Album", album.getTitle()))
+                .toList());
 
         List<Artist> artists = artistRepository.findByNameContainingIgnoreCase(query);
         results.addAll(artists.stream()
-                .map(artist -> new SearchAll("Artist", artist.getName()))
-                .collect(Collectors.toList()));
-
+                .map(artist -> new SearchAllEntity("Artist", artist.getName()))
+                .toList());
 
 
         List<Song> songs = songRepository.findByTitleContainingIgnoreCase(query);
         results.addAll(songs.stream()
-                .map(song -> new SearchAll("Song", song.getTitle()))
-                .collect(Collectors.toList()));
+                .map(song -> new SearchAllEntity("Song", song.getTitle()))
+                .toList());
 
         return results;
     }
